translation-tool/inputs/source_meta/objects/SA_VAR_Profile_PermissionSets__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Overflow__c</fullName>
        <label>Permission Set Overflow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>ProfileName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAR</label>
        <type>Checkbox</type>
    </fields>
    <label>SA_VAR_Profile_PermissionSets</label>
</CustomObject>